<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Edex UI</string>
    <string name="welcome_text">Welcome to Edex UI</string>
    
    <!-- Terminal -->
    <string name="terminal_title">Terminal</string>
    <string name="new_tab">New Tab</string>
    <string name="close_tab">Close Tab</string>
    
    <!-- System Info -->
    <string name="system_info">System Info</string>
    <string name="cpu_info">CPU Info</string>
    <string name="ram_usage">RAM Usage</string>
    <string name="network_info">Network Info</string>
    <string name="process_list">Processes</string>
    
    <!-- File Navigator -->
    <string name="file_navigator">File Navigator</string>
    <string name="go_to_path">Go to path</string>
    <string name="show_hidden">Show Hidden</string>
    
    <!-- Keyboard -->
    <string name="keyboard">Keyboard</string>
    
    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="about">About</string>
</resources>
